--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,8 +51,8 @@ jobs:
       #     # DISABLE_ERRORS: true
       #     # VALIDATE_ALL_CODEBASE: false
       #     VALIDATE_PHP_PSALM: false
-      - name: Install
-        # if: ${{ github.event.inputs.run-composer-install }}
+      - name: run composer install 
+        if: ${{ inputs.composer }}
         uses: docker://composer
         with:
           args: install
