--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,10 +6,7 @@ on:
         required: true
         default: false
         type: boolean
-      # linter-config:
-      #   type: string
-      #   required: false
-      #   default: easir/.github/.mega-linter.yml@master
+
     secrets:
       token:
         required: true
@@ -19,7 +16,6 @@ on:
         required: true
       docker-login:
         required: true
-
 
 
 jobs:
@@ -47,13 +43,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.4.2
 
-      # - name: Super-Linter
-      #   uses: github/super-linter/slim@v4.9.5
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.token }}
-      #     # DISABLE_ERRORS: true
-      #     # VALIDATE_ALL_CODEBASE: false
-      #     VALIDATE_PHP_PSALM: false
       - name: run composer install 
         if: ${{ inputs.composer }}
         uses: docker://composer
@@ -65,10 +54,44 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.token }}
           APPLY_FIXES: all
-          APPLY_FIXES_MODE: push
+          APPLY_FIXES_MODE: pull_request
           APPLY_FIXES_EVENT: all
-          # MEGALINTER_CONFIG: ${{ inputs.linter-config }}
-        
+      - name: Archive production artifacts
+        if: ${{ success() }} || ${{ failure() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: MegaLinter reports
+          path: |
+            megalinter-reports
+            mega-linter.log
+
+      # Create pull request if applicable (for now works only on PR from same repository, not from forks)
+      - name: Create Pull Request with applied fixes
+        id: cpr
+        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository)
+        uses: peter-evans/create-pull-request@v4
+        with:
+          token: ${{ secrets.token || secrets.GITHUB_TOKEN }}
+          commit-message: "[MegaLinter] Apply linters automatic fixes"
+          title: "[MegaLinter] Apply linters automatic fixes"
+          labels: bot
+      - name: Create PR output
+        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository)
+        run: |
+          echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+          echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
+
+      # Push new commit if applicable (for now works only on PR from same repository, not from forks)
+      - name: Prepare commit
+        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'commit' && github.ref != 'refs/heads/main' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository)
+        run: sudo chown -Rc $UID .git/
+      - name: Commit and push applied linter fixes
+        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'commit' && github.ref != 'refs/heads/main' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository)
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: ${{ github.event.pull_request.head.ref || github.head_ref || github.ref }}
+          commit_message: "[MegaLinter] Apply linters fixes"
+          
       - name: Set up Docker Context for Buildx
         id: buildx-context
         run: |
@@ -84,10 +107,8 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          # list of Docker images to use as base name for tags
           images: |
             ${{ secrets.docker-reg }}/${{ env.app }}
-          # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
             type=ref,event=branch
