--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,6 @@ jobs:
             tag=pr-"$pull_number-$GITHUB_SHA"
           fi
           echo "fulltag=${{secrets.docker-reg}}/$app:$tag">>"$GITHUB_ENV"
-          echo ${{ github.event.inputs.run-composer-install }}
       - name: Checkout
         uses: actions/checkout@v3.0.2
 
@@ -116,6 +115,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             ${{ env.tag }}
+            latest
 
       - name: Docker Login
         uses: docker/login-action@v2.0.0
