--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -114,8 +114,9 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            ${{ env.tag }}
-            latest
+            type=raw,value=${{ env.tag }}
+            type=ref,event=tag
+            type=sha,enable=true,priority=100,prefix=,suffix=,format=long
 
       - name: Docker Login
         uses: docker/login-action@v2.0.0
