--- a/actions/php-tests/action.yaml
+++ b/actions/php-tests/action.yaml
@@ -8,9 +8,15 @@ inputs:
 runs:
     using: composite
     steps:
+        -   uses: ./actions/file_exists
+            id: gitmodules_exists
+            with:
+                paths: .gitmodules
         -   name: Checkout GIT Submodules
             shell: sh
-            run: ([ -e .gitmodules ]) && git submodule update --init --recursive
+            if: steps.gitmodules_exists.outputs.file_exists
+            run: git submodule update --init --recursive
+
         -   name: Setup PHP
             uses: shivammathur/setup-php@v2
             with:
@@ -18,17 +24,38 @@ runs:
                 extensions: pdo_sqlite
                 coverage: pcov
             env: { runner: self-hosted }
+
         -   name: Composer Install
             uses: ramsey/composer-install@v2
             with: { composer-options: "--no-progress --no-scripts" }
+
+        -   name: Check if any PHP_CodeSniffer configuration file exists
+            uses: ./actions/file_exists
+            id: phpcs_exists
+            with:
+                paths: phpcs.xml phpcs.xml.dist
         -   name: PHP_CodeSniffer
             shell: sh
-            run: ([ -e phpcs.xml.dist ] || [ -e phpcs.xml ]) && composer exec -- phpcs
+            if: steps.phpcs_exists.outputs.file_exists
+            run: composer exec -- phpcs
+
+        -   name: Check if any Psalm configuration file exists
+            uses: ./actions/file_exists
+            id: psalm_exists
+            with:
+                paths: psalm.xml psalm.xml.dist
         -   name: Psalm
             shell: sh
+            if: steps.psalm_exists.outputs.file_exists
             run: ([ -e psalm.xml.dist ] || [ -e psalm.xml ]) && composer exec -- psalm --long-progress
+
+        -   name: Check if Makefile file exists
+            uses: ./actions/file_exists
+            id: make_exists
+            with:
+                paths: Makefile
         -   name: Tests
             shell: sh
-            if: inputs.make != ''
+            if: steps.make_exists.outputs.file_exists
             run: make ${{ inputs.make }} -O -k
             env: { APP_ENV: test }
