--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -24,7 +24,7 @@ jobs:
             GITHUB_TOKEN: ${{ secrets.token }}
         steps:
             -   uses: actions/checkout@v3 # moving below actions to easir/workflow allow embedding checkout inside
-            -   uses: ./actions/file_exists
+            -   uses: easir/workflow/actions/file_exists
                 id: gitmodules_exists
                 with:
                     paths: .gitmodules
@@ -46,7 +46,7 @@ jobs:
                 with: { composer-options: "--no-progress --no-scripts" }
 
             -   name: Check if any PHP_CodeSniffer configuration file exists
-                uses: ./actions/file_exists
+                uses: easir/workflow/actions/file_exists
                 id: phpcs_exists
                 with:
                     paths: phpcs.xml phpcs.xml.dist
@@ -56,7 +56,7 @@ jobs:
                 run: composer exec -- phpcs
 
             -   name: Check if any Psalm configuration file exists
-                uses: ./actions/file_exists
+                uses: easir/workflow/actions/file_exists
                 id: psalm_exists
                 with:
                     paths: psalm.xml psalm.xml.dist
@@ -66,7 +66,7 @@ jobs:
                 run: ([ -e psalm.xml.dist ] || [ -e psalm.xml ]) && composer exec -- psalm --long-progress
 
             -   name: Check if Makefile file exists
-                uses: ./actions/file_exists
+                uses: easir/workflow/actions/file_exists
                 id: make_exists
                 with:
                     paths: Makefile
