--- a/actions/build-and-push/action.yaml
+++ b/actions/build-and-push/action.yaml
@@ -1,11 +1,9 @@
 name: Docker build and push
 description: Build and push docker image
 inputs:
-    head:
-        deprecationMessage: Use `generate-tag` action instead
-        description: Project repository main branch name
+    app:
+        description: Project repository app name
         required: true
-        default: master
     tag:
         description: Docker Image tag to push
         required: true
@@ -22,38 +20,17 @@ inputs:
     password:
         description: Docker login Password
         required: true
-#outputs:
-#    fulltag:
-#        description: Docker image full tag
-#        value: ${{ steps.generatetag.outputs.fulltag }}
 runs:
     using: composite
     steps:
-        - uses: easir/workflows/actions/generate-tag@brzuchal
-          id: tags
-          with:
-              head: master
-#        -   name: GenerateTAG
-#            id: generatetag
-#            shell: sh
-#            run: |
-#                echo "GITHUB_REF - $GITHUB_REF"
-#                echo "GITHUB_SHA - $GITHUB_SHA"
-#                echo "GITHUB_REPOSITORY - $GITHUB_REPOSITORY"
-#                app=$(echo "$GITHUB_REPOSITORY" | cut -f 2 -d "/")
-#                pull_number=$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")
-#                echo "app=$app" >> "$GITHUB_ENV"
-#                if [ "$GITHUB_REF" = "refs/heads/${{ inputs.head }}" ]; then
-#                  echo "tag=production-$GITHUB_SHA" >> "$GITHUB_ENV"
-#                  tag=production-"$GITHUB_SHA"
-#                else
-#                  echo "tag=pr-$pull_number-$GITHUB_SHA" >> "$GITHUB_ENV"
-#                  tag=pr-"$pull_number-$GITHUB_SHA"
-#                fi
-#                echo "fulltag=${{ inputs.registry }}/$app:$tag">>"$GITHUB_ENV"
+        -   name: Check if project uses submodules
+            shell: sh
+            run: ([ -e .gitmodules ]) && echo "gitmodules_exists=true" >> $GITHUB_ENV || echo "gitmodules_exists=false" >> $GITHUB_ENV
         -   name: Checkout GIT Submodules
             shell: sh
-            run: ([ -e .gitmodules ]) && git submodule update --init --recursive
+            if: env.gitmodules_exists == 'true'
+            run: git submodule update --init --recursive
+
         -   name: Set up Docker Context for Buildx
             id: buildx-context
             shell: sh
@@ -68,8 +45,7 @@ runs:
             id: meta
             uses: docker/metadata-action@v4
             with:
-#                images: ${{ inputs.registry }}/${{ env.app }}
-                images: ${{ inputs.registry }}/${{ steps.tags.outputs.app }}
+                images: ${{ inputs.registry }}/${{ inputs.app }}
                 tags: |
                     type=schedule
                     type=ref,event=branch
@@ -77,7 +53,7 @@ runs:
                     type=semver,pattern={{ version }}
                     type=semver,pattern={{ major }}.{{ minor }}
                     type=semver,pattern={{ major }}
-                    type=raw,value=${{ steps.tags.outputs.tag }}
+                    type=raw,value=${{ inputs.tag }}
                     type=ref,event=tag
                     type=sha,enable=true,priority=100,prefix=,suffix=,format=long
         -   name: Docker Login
