--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -7,21 +7,21 @@ on:
                 default: ""
                 type: string
 
-        secrets:
-            token:
-                required: true
-            docker-reg:
-                required: true
-            docker-pass:
-                required: true
-            docker-login:
-                required: true
+#        secrets:
+#            token:
+#                required: true
+#            docker-registry:
+#                required: true
+#            docker-password:
+#                required: true
+#            docker-username:
+#                required: true
 jobs:
     analysis-and-tests:
         name: Analysis and tests
         runs-on: [ self-hosted ]
-        env:
-            GITHUB_TOKEN: ${{ secrets.token }}
+#        env:
+#            GITHUB_TOKEN: ${{ secrets.token }}
         steps:
             -   uses: actions/checkout@v3
 
@@ -74,8 +74,8 @@ jobs:
         name: Build and push
         needs: analysis-and-tests
         runs-on: [ self-hosted ]
-        env:
-            GITHUB_TOKEN: ${{ secrets.token }}
+#        env:
+#            GITHUB_TOKEN: ${{ secrets.token }}
         steps:
             -   uses: actions/checkout@v3
             -   name: Generate Docker image tag
@@ -88,6 +88,6 @@ jobs:
                 with:
                     app: ${{ steps.tags.outputs.app }}
                     tag: ${{ steps.tags.outputs.tag }}
-                    registry: ${{ secrets.docker-reg }}
-                    username: ${{ secrets.docker-login }}
-                    password: ${{ secrets.docker-pass }}
+#                    registry: ${{ secrets.docker-registry }}
+#                    username: ${{ secrets.docker-username }}
+#                    password: ${{ secrets.docker-password }}
