--- a/.github/workflows/php.yaml
+++ b/.github/workflows/php.yaml
@@ -7,21 +7,10 @@ on:
                 default: ""
                 type: string
 
-#        secrets:
-#            token:
-#                required: true
-#            docker-registry:
-#                required: true
-#            docker-password:
-#                required: true
-#            docker-username:
-#                required: true
 jobs:
     analysis-and-tests:
         name: Analysis and tests
         runs-on: [ self-hosted ]
-#        env:
-#            GITHUB_TOKEN: ${{ secrets.token }}
         steps:
             -   uses: actions/checkout@v3
 
@@ -74,20 +63,18 @@ jobs:
         name: Build and push
         needs: analysis-and-tests
         runs-on: [ self-hosted ]
-#        env:
-#            GITHUB_TOKEN: ${{ secrets.token }}
         steps:
             -   uses: actions/checkout@v3
             -   name: Generate Docker image tag
-                uses: easir/workflows/actions/generate-tag@9ebdb8078f6420cfc3b0d6653a231f823da6a1d3
+                uses: easir/workflows/actions/generate-tag@103d43cb2557cf9bc517c9087c3e630cce54d21a
                 id: tags
                 with:
-                    head: master
+                    head: $default_branch
             -   name: Build and push Docker image
-                uses: easir/workflows/actions/build-and-push@9ebdb8078f6420cfc3b0d6653a231f823da6a1d3
+                uses: easir/workflows/actions/build-and-push@103d43cb2557cf9bc517c9087c3e630cce54d21a
                 with:
                     app: ${{ steps.tags.outputs.app }}
                     tag: ${{ steps.tags.outputs.tag }}
-#                    registry: ${{ secrets.docker-registry }}
-#                    username: ${{ secrets.docker-username }}
-#                    password: ${{ secrets.docker-password }}
+                    registry: ${{ secrets.DOCKER_REGISTRY_URL }}
+                    username: ${{ secrets.DOCKER_LOGIN }}
+                    password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
