--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -2,10 +2,11 @@ name: Build and push
 on:
     workflow_call:
         inputs:
-            app:
-                description: Project repository app name
+            default_branch:
+                description: Projects default branch name
                 type: string
                 required: false
+                default: master
             tag:
                 description: Docker Image tag to push
                 type: string
@@ -27,7 +28,7 @@ jobs:
                 uses: easir/workflows/actions/generate-tag@103d43cb2557cf9bc517c9087c3e630cce54d21a
                 id: tags
                 with:
-                    head: $default_branch
+                    head: ${{ inputs.default_branch }}
 
             -   name: Check if project uses submodules
                 shell: sh
@@ -47,11 +48,11 @@ jobs:
                 with:
                     version: latest
                     endpoint: builders
-            -   name: Docker meta
+            -   name: Docker meta with calculated tag
                 id: meta
                 uses: docker/metadata-action@v4
                 with:
-                    images: ${{ secrets.DOCKER_REGISTRY_URL }}/${{ inputs.app || steps.tags.output.app }}
+                    images: ${{ secrets.DOCKER_REGISTRY_URL }}/${{ steps.tags.output.app }}
                     tags: |
                         type=schedule
                         type=ref,event=branch
@@ -59,15 +60,15 @@ jobs:
                         type=semver,pattern={{ version }}
                         type=semver,pattern={{ major }}.{{ minor }}
                         type=semver,pattern={{ major }}
-                        type=raw,value=${{ inputs.tag || steps.tags.outputs.tag }}
+                        type=raw,value=${{ inputs.tag != '' && inputs.tag || steps.tags.outputs.tag }}
                         type=ref,event=tag
                         type=sha,enable=true,priority=100,prefix=,suffix=,format=long
             -   name: Docker Login
                 uses: docker/login-action@v2.0.0
                 with:
                     registry: ${{ secrets.DOCKER_REGISTRY_URL }}
-                    username: ${{ inputs.DOCKER_LOGIN }}
-                    password: ${{ inputs.DOCKER_REGISTRY_PASSWORD }}
+                    username: ${{ secrets.DOCKER_LOGIN }}
+                    password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
                     ecr: false
             -   name: Build and push Docker images
                 uses: docker/build-push-action@v3.1.1
