--- a/actions/generate-tag/action.yaml
+++ b/actions/generate-tag/action.yaml
@@ -1,7 +1,7 @@
 name: Generate Docker image tag
 description: Generate Docker image tags using current project and branch name and sha
 inputs:
-    head:
+    default_branch:
         description: Project repository main branch name
         required: true
         default: master
@@ -23,7 +23,7 @@ runs:
             run: |
                 app=$(echo "$GITHUB_REPOSITORY" | cut -f 2 -d "/")
                 echo "app=$app" >> "$GITHUB_OUTPUT"
-                if [ "$GITHUB_REF" = "refs/heads/${{ inputs.head }}" ]; then
+                if [ "$GITHUB_REF" = "refs/heads/${{ inputs.default_branch }}" ]; then
                   tag=production-$GITHUB_SHA
                 else
                   tag=pr-$(jq -r .pull_request.number "$GITHUB_EVENT_PATH")-$GITHUB_SHA
