--- a/actions/build-and-push/action.yaml
+++ b/actions/build-and-push/action.yaml
@@ -23,6 +23,7 @@ inputs:
 runs:
     using: composite
     steps:
+        -   uses: actions/checkout@v3
         -   name: Check if project uses submodules
             shell: sh
             run: ([ -e .gitmodules ]) && echo "gitmodules_exists=true" >> $GITHUB_ENV || echo "gitmodules_exists=false" >> $GITHUB_ENV
