--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,10 @@ on:
         required: true
         default: "all"
         type: string
+      ComposerVersion:
+        required: false
+        default: "latest"
+        type: string
 
     secrets:
       token:
@@ -26,6 +30,7 @@ jobs:
       APPLY_FIXES_EVENT: all
 
     runs-on: ["self-hosted"]
+    timeout-minutes: 15
     steps:
       - name: GenerateTAG
         id: generatetag
@@ -47,15 +52,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.0.2
 
-      # - name: Run & fix PHP Code Sniffer
-      #   if: ${{ inputs.language == "php" }}
-      #   uses: shalior/wordpress-phpcs-action@v1.0.3
-      #   with:
-      #     github_token: ${{ secrets.token }}
-
       - name: run composer install 
         if: inputs.language == 'php'
-        uses: docker://composer
+        uses: docker://composer:${{ inputs.ComposerVersion }}
         with:
           args: install
 
@@ -64,7 +63,7 @@ jobs:
         uses: oxsecurity/megalinter@v6.11.1
 
       - name: Archive production artifacts
-        if: ${{ success() }} || ${{ failure() }}
+        if: ${{ ( success() }} || ${{ failure() ) && MLEnabled }}
         uses: actions/upload-artifact@v2
         with:
           name: MegaLinter reports
@@ -75,7 +74,7 @@ jobs:
       # Create pull request if applicable (for now works only on PR from same repository, not from forks)
       - name: Create Pull Request with applied fixes
         id: cpr
-        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository)
+        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository) && MLEnabled
         uses: peter-evans/create-pull-request@v4.1.3
         with:
           token: ${{ secrets.token || secrets.GITHUB_TOKEN }}
@@ -85,7 +84,7 @@ jobs:
           base: ${{ github.head_ref }}
   
       - name: Create PR output
-        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository)
+        if: steps.ml.outputs.has_updated_sources == 1 && (env.APPLY_FIXES_EVENT == 'all' || env.APPLY_FIXES_EVENT == github.event_name) && env.APPLY_FIXES_MODE == 'pull_request' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository) && MLEnabled
         run: |
           echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
           echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
